--- a/src/modules/ui/controls/progress/progress.scss
+++ b/src/modules/ui/controls/progress/progress.scss
@@ -11,25 +11,18 @@ $seek-pointer-width-full-screen: 16px;
 
 $sync-pointer-height: 6px;
 $sync-pointer-width: 6px;
-$sync-pointer-hover-height: 8px;
-$sync-pointer-hover-width: 8px;
 $sync-pointer-border: 2px;
-$sync-pointer-hover-border: 3px;
 
 $sync-pointer-height-full-screen: 8px;
 $sync-pointer-width-full-screen: 8px;
-$sync-pointer-height-hover-full-screen: 10px;
-$sync-pointer-width-hover-full-screen: 10px;
 
 $color-played: #fff;
 $color-seek-to: rgba(255, 255, 255, .5);
 $color-played-live: #ea492e;
 $color-seek-to-live: rgba(234,73,46, .5);
 
-$color-sync-pointer-background: #9e1110;
 $color-sync-pointer-border: #bababa;
-$color-sync-pointer-hover-background: #ea492e;
-$color-sync-pointer-hover-border: #fff;
+$color-sync-pointer-background: #ea492e;
 
 .seekBlock {
   position: relative;
@@ -79,23 +72,10 @@ $color-sync-pointer-hover-border: #fff;
     }
 
     .syncButton {
-      top: -($sync-pointer-hover-height + 2 * $sync-pointer-hover-border - $progress-bar-height) / 2;
-      right: -($sync-pointer-hover-width + 2 * $sync-pointer-hover-border) / 2;
-
-      width: $sync-pointer-hover-width;
-      height: $sync-pointer-hover-height;
-
-      border-width: $sync-pointer-hover-border;
-      border-color: $color-played;
-      //opacity: 1;
-      background-color: $color-sync-pointer-hover-background;
+      transform: scale(1.4);
 
       @include in-full-screen() {
-        top: -$progress-bar-height-full-screen / 2;
-        right: -($sync-pointer-width-full-screen + 2 * $sync-pointer-hover-border) / 2 - 1;
-
-        width: $sync-pointer-width-hover-full-screen;
-        height: $sync-pointer-height-hover-full-screen;
+        transform: scale(1.33);
       }
 
       &.liveSync {
@@ -117,7 +97,7 @@ $color-sync-pointer-hover-border: #fff;
   height: $sync-pointer-height;
 
   cursor: pointer;
-  transition: width .1s cubic-bezier(.0,.0,.2,1), height .1s cubic-bezier(.0,.0,.2,1);
+  transition: transform .1s cubic-bezier(.0,.0,.2,1);
 
   border: $sync-pointer-border solid $color-sync-pointer-border;
   border-radius: 50%;
