--- a/src/modules/root-container/root-container.scss
+++ b/src/modules/root-container/root-container.scss
@@ -27,8 +27,8 @@
 
 
 :global {
-  [data-focus-source='key'] [data-hook='player-container'],
-  [data-focus-source='script'] [data-hook='player-container'] {
+  [data-focus-source='key'] [data-hook='playable-player-container'],
+  [data-focus-source='script'] [data-hook='playable-player-container'] {
     button.focus-within,
     input.focus-within,
     img.focus-within {
