--- a/src/modules/ui/media-query-mixins.scss
+++ b/src/modules/ui/media-query-mixins.scss
@@ -1,11 +1,11 @@
 @mixin in-full-screen() {
-  div[data-hook='player-container'][data-in-full-screen='true'] & {
+  div[data-hook='playable-player-container'][data-in-full-screen='true'] & {
     @content
   }
 }
 
 @mixin query-basic($query, $value) {
-  div[data-hook='player-container'][#{$query}~=#{'"' + $value + '"'}] & {
+  div[data-hook='playable-player-container'][#{$query}~=#{'"' + $value + '"'}] & {
     @content
   }
 }
