--- a/src/modules/ui/preview-thumbnail/preview-thumbnail.scss
+++ b/src/modules/ui/preview-thumbnail/preview-thumbnail.scss
@@ -8,8 +8,9 @@ $thumbnail-height: 90px;
   width: $thumbnail-width;
   height: $thumbnail-height;
 
-  border: 2px solid rgba(0, 0, 0, .7);
+  border: 2px solid rgba(0, 0, 0, .5);
   border-radius: 2px;
+  background-color: rgba(0, 0, 0, .5);
 
   align-items: center;
 
@@ -18,6 +19,7 @@ $thumbnail-height: 90px;
     height: initial;
 
     border: none;
+    border-radius: 0;
   }
 }
 
@@ -39,7 +41,7 @@ $thumbnail-height: 90px;
 
 .empty {
   .thumbText {
-    background: rgba(0, 0, 0, .5);
+    background: none;
   }
 
   .highQualityFrame,
