improvement(theme): changes in theme for progress control and logo

--- a/src/modules/ui/controls/progress/progress.scss
+++ b/src/modules/ui/controls/progress/progress.scss
@@ -185,6 +185,8 @@ $color-sync-pointer-background: #ea492e;
 
 .background {
   width: 100%;
+
+  background-color: transparentize(#fff, .75);
 }
 
 .seekTo {
