--- a/src/modules/ui/controls/volume/volume.scss
+++ b/src/modules/ui/controls/volume/volume.scss
@@ -128,8 +128,8 @@ $color: white !default;
 }
 
 :global {
-  [data-focus-source='key'] [data-hook='playable-volume-control'],
-  [data-focus-source='script'] [data-hook='playable-volume-control'] {
+  [data-playable-focus-source='key'] [data-playable-hook='volume-control'],
+  [data-playable-focus-source='script'] [data-playable-hook='volume-control'] {
     .focus-within {
       &:local.volumeInputBlock {
         width: 50px;
