fix(full-screen): fixed wrong attribute inside mixin for full screen styles

--- a/src/modules/ui/controls/time/time.scss
+++ b/src/modules/ui/controls/time/time.scss
@@ -11,9 +11,11 @@
 
 .time {
   font-size: 12px;
+  line-height: 12px;
 
   @include in-full-screen() {
     font-size: 14px;
+    line-height: 14px;
   }
 }
 
