--- a/src/modules/ui/screen/screen.scss
+++ b/src/modules/ui/screen/screen.scss
@@ -17,37 +17,26 @@
   justify-content: center;
   align-items: center;
 
-  &.regularMode {
+  &.regularMode,
+  &.blurMode {
     video {
       width: 100%;
       height: 100%;
     }
   }
 
-  &.verticalVideo {
-    flex-direction: row;
+  &.verticalStripes {
     &.fillMode {
       video {
         width: 100%;
-      }
-    }
-    &.blurMode {
-      video {
-        height: 100%;
       }
     }
   }
 
-  &.horizontalVideo {
-    flex-direction: column;
+  &.horizontalStripes {
     &.fillMode {
       video {
         height: 100%;
-      }
-    }
-    &.blurMode {
-      video {
-        width: 100%;
       }
     }
   }
