--- a/src/modules/root-container/root-container.scss
+++ b/src/modules/root-container/root-container.scss
@@ -4,7 +4,20 @@
   font-family: HelveticaNeueW01-45Ligh, HelveticaNeueW02-45Ligh,
   HelveticaNeueW10-45Ligh, Helvetica Neue, Helvetica, Arial,
   \\30e1\30a4\30ea\30aa, meiryo, \\30d2\30e9\30ae\30ce\89d2\30b4 pro w3,
-  hiragino kaku gothic pro;  position: relative;  z-index: 0;  display: block;  overflow: hidden;  height: inherit;@import './normalize/universal';@import './normalize/button';
+  hiragino kaku gothic pro;
+
+  position: relative;
+  z-index: 0;
+
+  display: block;
+  overflow: hidden;
+
+  height: inherit;
+
+  outline: none;
+
+  @import './normalize/universal';
+  @import './normalize/button';
 }
 
 .fillAllSpace,
