--- a/src/modules/ui/bottom-block/bottom-block.scss
+++ b/src/modules/ui/bottom-block/bottom-block.scss
@@ -10,20 +10,12 @@
     border: 0;
   }
 
-  &.activated,
-  &.focus-within {
+  &.activated {
     .progressBarContainer,
     .controlsContainerLeft,
     .controlsContainerRight,
-    .logoContainer {
-      visibility: visible;
-
-      opacity: 1;
-    }
-
+    .logoContainer,
     .background {
-      visibility: visible;
-
       opacity: 1;
     }
   }
@@ -115,9 +107,7 @@
 .controlsContainerLeft,
 .controlsContainerRight,
 .logoContainer {
-  visibility: hidden;
-
-  transition: opacity .2s, visibility .2s;
+  transition: opacity .2s;
 
   opacity: 0;
 }
@@ -228,20 +218,18 @@
   right: 0;
   bottom: 0;
   left: 0;
-
-  visibility: hidden;
   //height less then background by 1px 'cause of strange problem on chrome, when visible size of background is 181px
   //maybe it's 'cause of linear-gradient
 
   height: 181px;
 
-  transition: opacity .2s, visibility .2s;
+  transition: opacity .2s;
   pointer-events: none;
 
   opacity: 0;
   background-image: linear-gradient(
   to bottom,
-  rgba(0, 0, 0, .0),
+  rgba(0, 0, 0, 0),
   rgba(0, 0, 0, .03) 24%,
   rgba(0, 0, 0, .15) 50%,
   rgba(0, 0, 0, .3) 75%,
