fix: adding more strict override for box-sizin

--- a/src/modules/root-container/normalize/_universal.scss
+++ b/src/modules/root-container/normalize/_universal.scss
@@ -1,7 +1,7 @@
 *,
 *:before,
 *:after {
-  box-sizing: content-box;
+  box-sizing: content-box !important;
 
-  outline: none;
+  outline: none !important;
 }
