fix: #120 not applying normalization of css to elements not from our codebase

--- a/src/modules/root-container/root-container.scss
+++ b/src/modules/root-container/root-container.scss
@@ -19,7 +19,7 @@
   @import './normalize/button';
 }
 
-[data-playable-hook='player-container'].container {
+[data-playable-hook='player-container'].container [data-playable-component] {
   @import './normalize/universal';
 }
 
