fix(screen): fixing styles for FILL mode

--- a/src/modules/ui/screen/screen.scss
+++ b/src/modules/ui/screen/screen.scss
@@ -25,10 +25,17 @@
     }
   }
 
+  &.fillMode {
+    video {
+      position: absolute;
+    }
+  }
+
   &.verticalStripes {
     &.fillMode {
       video {
         width: 100%;
+        height: auto !important;
       }
     }
   }
