--- a/src/modules/ui/media-query-mixins.scss
+++ b/src/modules/ui/media-query-mixins.scss
@@ -1,41 +1,60 @@
-@mixin in-full-screen() {
-  div[data-playable-hook='player-container'][data-playable-in-full-screen='true'] & {
+/**
+ * The challenge here to support "playable queries" and "direction" at the same time and allow mixins like:
+ *   @include max-width-550()
+ *   @include max-width-550(ltr)
+ *   @include max-width-550(rtl)
+ */
+
+@mixin in-full-screen($direction: false) {
+  $directionQuery: if($direction, '[playable-dir="#{$direction}"]', '');
+
+  div[data-playable-hook='player-container'][data-playable-in-full-screen='true']#{$directionQuery} & {
+    @content;
+
+    @if ($direction) {
+      direction: $direction;
+    }
+  }
+}
+
+@mixin query-basic($query, $value, $direction) {
+  $directionQuery: if($direction, '[playable-dir="#{$direction}"]', '');
+
+  div[data-playable-hook='player-container'][data-playable-#{$query}~='#{$value}']#{$directionQuery} & {
+    @content;
+
+    @if ($direction) {
+      direction: $direction;
+    }
+  }
+}
+
+@mixin max-width-550($direction: false) {
+  @include query-basic(max-width, 550px, $direction) {
     @content
   }
 }
 
-@mixin query-basic($query, $value) {
-  div[data-playable-hook='player-container'][data-playable-#{$query}~=#{'"' + $value + '"'}] & {
+@mixin max-width-400($direction: false) {
+  @include query-basic(max-width, 400px, $direction) {
     @content
   }
 }
 
-@mixin max-width-550() {
-  @include query-basic(max-width, 550px) {
+@mixin max-width-350($direction: false) {
+  @include query-basic(max-width, 350px, $direction) {
     @content
   }
 }
 
-@mixin max-width-400() {
-  @include query-basic(max-width, 400px) {
+@mixin max-width-300($direction: false) {
+  @include query-basic(max-width, 300px, $direction) {
     @content
   }
 }
 
-@mixin max-width-350() {
-  @include query-basic(max-width, 350px) {
-    @content
-  }
-}
-
-@mixin max-width-300() {
-  @include query-basic(max-width, 300px) {
-    @content
-  }
-}
-
-@mixin max-width-280() {
-  @include query-basic(max-width, 280px) {
+@mixin max-width-280($direction: false) {
+  @include query-basic(max-width, 280px, $direction) {
     @content
   }
 }
