--- a/src/modules/ui/bottom-block/bottom-block.scss
+++ b/src/modules/ui/bottom-block/bottom-block.scss
@@ -30,10 +30,10 @@
     .fullScreenContainer {
       margin-right: 14px;
 
-      @include max-width-550() {
+      @include apply(max-width-550()) {
         margin-right: 7px;
       }
-      @include in-full-screen() {
+      @include apply(in-full-screen()) {
         margin-right: 25px;
       }
     }
@@ -95,15 +95,15 @@
 
   padding: 0 20px;
 
-  @include in-full-screen() {
+  @include apply(in-full-screen()) {
     top: 3px;
 
     padding: 0 30px;
   }
-  @include max-width-550() {
+  @include apply(max-width-550()) {
     padding: 0 15px;
   }
-  @include max-width-280() {
+  @include apply(max-width-280()) {
     padding: 0 12px;
   }
 }
@@ -139,13 +139,13 @@
 .logoContainer {
   height: 54px;
 
-  @include in-full-screen() {
+  @include apply(in-full-screen()) {
     height: 80px;
   }
-  @include max-width-550() {
+  @include apply(max-width-550()) {
     height: 42px;
   }
-  @include max-width-350() {
+  @include apply(max-width-350()) {
     height: 36px;
   }
 }
@@ -154,14 +154,14 @@
   margin-right: 9px;
   margin-left: 13px;
 
-  @include in-full-screen() {
+  @include apply(in-full-screen()) {
     margin-right: 20px;
     margin-left: 20px;
   }
-  @include max-width-550() {
+  @include apply(max-width-550()) {
     margin-left: 7px;
   }
-  @include max-width-280() {
+  @include apply(max-width-280()) {
     margin-left: 4px;
   }
 }
@@ -169,7 +169,7 @@
 .volumeContainer {
   margin-right: 15px;
 
-  @include in-full-screen() {
+  @include apply(in-full-screen()) {
     margin-right: 20px;
   }
 }
@@ -177,10 +177,10 @@
 .timeContainer {
   margin-right: 18px;
 
-  @include in-full-screen() {
+  @include apply(in-full-screen()) {
     margin-right: 30px;
   }
-  @include max-width-400() {
+  @include apply(max-width-400()) {
     display: none;
   }
 }
@@ -188,7 +188,7 @@
 .downloadContainer {
   margin-right: 8px;
 
-  @include in-full-screen() {
+  @include apply(in-full-screen()) {
     margin-right: 18px;
   }
 }
@@ -196,7 +196,7 @@
 .fullScreenContainer {
   margin-right: 8px;
 
-  @include in-full-screen() {
+  @include apply(in-full-screen()) {
     margin-right: 18px;
     //margin-left: 0;
   }
@@ -205,7 +205,7 @@
 .pictureInPictureContainer {
   margin-right: 8px;
 
-  @include in-full-screen() {
+  @include apply(in-full-screen()) {
     margin-right: 18px;
   }
 }
@@ -215,13 +215,13 @@
 
   margin-right: 14px;
 
-  @include max-width-550() {
+  @include apply(max-width-550()) {
     margin-right: 9px;
   }
-  @include in-full-screen() {
+  @include apply(in-full-screen()) {
     margin-right: 23px;
   }
-  @include max-width-280() {
+  @include apply(max-width-280()) {
     margin-right: 12px;
   }
 }
@@ -229,7 +229,7 @@
 .additionalButton {
   margin-right: 8px;
 
-  @include in-full-screen() {
+  @include apply(in-full-screen()) {
     margin-right: 18px;
   }
 }
