--- a/src/modules/ui/controls/play/play.scss
+++ b/src/modules/ui/controls/play/play.scss
@@ -17,7 +17,7 @@
   height: 26px;
   min-height: 26px;
 
-  @include in-full-screen() {
+  @include apply(in-full-screen()) {
     width: 35px;
     min-width: 35px;
     height: 35px;
