--- a/src/modules/ui/top-block/top-block.scss
+++ b/src/modules/ui/top-block/top-block.scss
@@ -29,41 +29,46 @@
   margin-top: 20px;
 
   align-items: center;
-  @include apply(ltr()) {
+  @include query(ltr()) {
     margin-left: 20px;
   }
-  @include apply(rtl()) {
+  @include query(rtl()) {
     margin-right: 20px;
+
+    direction: rtl;
   }
-  @include apply(in-full-screen()) {
+  @include query(in-full-screen()) {
     margin-top: 30px;
   }
-  @include apply(in-full-screen(),ltr()) {
+  @include query(in-full-screen(), ltr()) {
     margin-left: 30px;
   }
-  @include apply(in-full-screen(),rtl()) {
+  @include query(in-full-screen(), rtl()) {
     margin-right: 30px;
+
+    direction: rtl;
   }
-  @include apply(max-width-550()) {
+  @include query(max-width-550()) {
     margin-top: 15px;
   }
-  @include apply(max-width-550(), ltr()) {
+  @include query(max-width-550(), ltr()) {
     margin-left: 15px;
   }
-  @include apply(max-width-550()) {
-    margin-left: 15px;
-  }
-  @include apply(max-width-550(), ltr()) {
+  @include query(max-width-550(), rtl()) {
     margin-right: 15px;
+
+    direction: rtl;
   }
-  @include apply(max-width-280()) {
+  @include query(max-width-280()) {
     margin-top: 12px;
   }
-  @include apply(max-width-280(), ltr()) {
+  @include query(max-width-280(), ltr()) {
     margin-left: 12px;
   }
-  @include apply(max-width-280(), rtl()) {
+  @include query(max-width-280(), rtl()) {
     margin-right: 12px;
+
+    direction: rtl;
   }
 }
 
