--- a/src/modules/ui/conditions.scss
+++ b/src/modules/ui/conditions.scss
@@ -1,65 +1,53 @@
 /**
  * The challenge here to support "playable queries" and "direction" at the same time and allow mixins like:
- *   @include apply(max-width-550())
- *   @include apply(max-width-550(), ltr())
- *   @include apply(max-width-550(), rtl())
+ *   @include query(max-width-550())
+ *   @include query(max-width-550(), ltr())
+ *   @include query(max-width-550(), rtl())
  */
 
-@function max-width($value) {
-  @return '[data-playable-max-width~="#{$value}"]'
+@function max-width-query($value) {
+  @return '[data-playable-max-width~="#{$value}"]';
 }
 
 @function direction-query($direction) {
   @return '[data-playable-dir="#{$direction}"]';
 }
 
-@function in-full-screen() {
-  @return '[data-playable-in-full-screen="true"]';
-}
-
-@mixin apply($mixins...) {
+@mixin query($mixins...) {
   $query: '';
   $direction: false;
 
   @each $mixin in $mixins {
     $query: $query + $mixin;
-
-    @if ($mixin == direction-query('ltr')) {
-      $direction: ltr;
-    }
-
-    @if ($mixin == direction-query('rtl')) {
-      $direction: rtl;
-    }
   }
 
   [data-playable-hook='player-container']#{$query} & {
     @content;
-
-    @if ($direction) {
-      direction: $direction;
-    }
   }
 }
 
+@function in-full-screen() {
+  @return '[data-playable-in-full-screen="true"]';
+}
+
 @function max-width-550() {
-  @return max-width(550px);
+  @return max-width-query(550px);
 }
 
 @function max-width-400() {
-  @return max-width(400px);
+  @return max-width-query(400px);
 }
 
 @function max-width-350() {
-  @return max-width(350px);
+  @return max-width-query(350px);
 }
 
 @function max-width-300() {
-  @return max-width(300px);
+  @return max-width-query(300px);
 }
 
 @function max-width-280() {
-  @return max-width(280px);
+  @return max-width-query(280px);
 }
 
 @function ltr() {
