--- a/src/modules/ui/controls/logo/logo.scss
+++ b/src/modules/ui/controls/logo/logo.scss
@@ -28,15 +28,15 @@
 
   transition: opacity .2s;
 
-  @include apply(max-width-550()) {
+  @include query(max-width-550()) {
     max-width: 90px;
     max-height: 20px;
   }
-  @include apply(max-width-350()) {
+  @include query(max-width-350()) {
     max-width: 70px;
     max-height: 18px;
   }
-  @include apply(in-full-screen()) {
+  @include query(in-full-screen()) {
     max-width: 450px;
     max-height: 36px;
   }
@@ -54,7 +54,7 @@
 
   transition: transform .2s;
 
-  @include apply(in-full-screen()) {
+  @include query(in-full-screen()) {
     width: 35px;
     min-width: 35px;
     height: 35px;
