--- a/src/modules/ui/controls/time/time.scss
+++ b/src/modules/ui/controls/time/time.scss
@@ -13,7 +13,7 @@
   font-size: 12px;
   line-height: 12px;
 
-  @include apply(in-full-screen()) {
+  @include query(in-full-screen()) {
     font-size: 14px;
     line-height: 14px;
   }
